# ExpiringDictionary

./: .gitignore  README.md
ExpiringDictionary/: CMakeLists.txt
ExpiringDictionary/cmake/: ExpiringDictionaryConfig.cmake.in
ExpiringDictionary/include/: ExpiringDictionary.Interop.h  ExpiringDictionary.h
ExpiringDictionary/scripts/: build.sh  configure.sh
ExpiringDictionary/src/: ExpiringDictionary.cpp
ExpiringDictionary/test/: main.cpp
ExpiringDictionaryWrapper/src/: ExpiringDictionaryWrapper.cs  ExpiringDictionaryWrapper.csproj  NativeMethods.cs
ExpiringDictionaryWrapper/tests/: ExpiringDictionaryWrapper.Tests.csproj  ExpiringDictionaryWrapperTests.cs
ExpiringDictionaryWrapper/tests/Models/: Person.cs
